Add header code and styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
+    <!-- Header code with two containers-->
+    <div class='headBackground'>
+      <!-- Logo and menu in two sub contaoners-->
+      <div class='title'>
+        <div class='logo'>
+          <img src="./resources/css/images/logo-white.png"/>
+          <p>Tortoiseshell Optics</p>
+        </div>
+        <div class='menu'>
+          <p>Services</p>
+          <p>Products</P>
+          <p>Contact</p>
+        </div>
+      </div>
+      <!-- Another container for the slogan - not sure why margisn work!-->
+      <div class='container'>
+        <div class='slogan'>
+          <h1>DON'T JUST LOOK, SEE.</H1>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
