Add service features

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Tortoiseshell Optics</title>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet"/>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
     <!-- Header code with two containers-->
@@ -21,13 +21,52 @@
           <p>Contact</p>
         </div>
       </div>
-      <!-- Another container for the slogan - not sure why margisn work!-->
+      <!-- Another container for the slogan - not sure why margins work!-->
       <div class='container'>
         <div class='slogan'>
           <h1>DON'T JUST LOOK, SEE.</H1>
         </div>
       </div>
     </div>
-
+    <!--This section sets out the three service features advertised-->
+    <!--Includes some formatting not on spec eg para line-height is 1.4-->
+    <!--I have also skipped the 6rem between ruler an d trcuk because spacing works in this format-->
+    <div class="services">
+      <div class="imageGrid">
+        <div class="container">
+          <div class="feature">
+            <div class="box">
+              <img id="paper" src="./resources/css/images/paper-icon.png"/>
+            </div>
+          </div>
+          <div class="feature">
+            <div class="box">
+              <img id="ruler" src="./resources/css/images/ruler-icon.png"/>
+            </div>
+          </div>
+          <div class="feature">
+            <div class="box">
+              <img id="truck" src="./resources/css/images/truck-icon.png"/>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="textGrid">
+        <div class="textContainer">
+          <div class="description">
+            <p>Comprehensive</p>
+            <p>Exams</p>
+          </div>
+          <div class="description">
+            <p>Custom</p>
+            <p>Fitting</p>
+          </div>
+          <div class="description">
+            <p>Fast</p>
+            <p>Delivery</p>
+          </div>
+        </div>
+      </div>
+  </div>
   </body>
 </html>
