--- a/index.html
+++ b/index.html
@@ -68,5 +68,27 @@
         </div>
       </div>
   </div>
+  <!--Section includes the philosophy and booking details-->
+  <!--Fixed typos in brief eg "no" for "not" and "Its" for "It's"-->
+  <div class="companyInfo">
+    <div class="container">
+      <div class="info">
+        <div class="title">
+          <h2>PHILOSOPHY</h2>
+        </div>
+        <p>Over 75% of our people are dedicated to one sense: vision. We believe
+          everyone deserves to see the world, no matter what. That's why we offer
+          eye exams, custom fittings and quick delivery at a low cost. Its your
+          vision that makes ours.</p>
+      </div>
+      <div class="info">
+        <div class="title">
+          <h2>APPOINTMENTS</h2>
+        </div>
+        <p>Schedule an appointment by calling us at (312) 654-0987. We're open
+        Tuesday - Saturday 9AM - 6PM.</p>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
