Finish desktop version

--- a/index.html
+++ b/index.html
@@ -90,5 +90,16 @@
       </div>
     </div>
   </div>
+  <!--Footer added and included copyright symbol for taste-->
+  <footer class="footer">
+    <div class="container">
+      <div class="logo">
+        <img src="./resources/css/images/logo-black.png"/>
+      </div>
+      <div class="notice">
+        <p>&copy;Copyright Tortoiseshell Optics</p>
+      </div>
+    </div>
+  </footer>
   </body>
 </html>
