--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     of redline not just precise dimensions-->
     <div class='headBackground'>
       <!-- Logo and menu in two sub contaoners-->
+      <!--Image at sub 480px does not show whole. Tried background-size: 100%100%;
+      but distorts image. Couldn't find a better option-->
       <div class='title'>
         <div class='logo'>
           <img src="./resources/css/images/logo-white.png"/>
